--- a/viz/index.html
+++ b/viz/index.html
@@ -43,6 +43,12 @@
           <li class="nav-item">
             <a class="nav-link" data-href="baseball" href="#">Baseball</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" data-href="nfl" href="#">American Football</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-href="golf" href="#">Golf</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -52,7 +58,7 @@
         baseball. The data is extracted from nyt, common crawl and twitter.
       </div>
       <div class="word-cloud-container">
-        <h1>Word count:</h1>
+        <h1 style="text-align:center">Word count:</h1>
         <div class="word-count-container">
           <h2>New York Times</h2>
           <div class="wc-nyt word-cloud"></div>
